Fixed now block on mobile

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -588,7 +588,7 @@ footer a:hover {
 		display: none;
 	}
 
-	.tumblr-block-array, .bookmark-block {
+	.tumblr-block-array, .bookmark-block, .now-block {
 		grid-template-columns: 1fr;
 	}
 
